resources/day25/apps/blue-green/preview-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-backend
  name: app-backend-preview
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-backend
