resources/day25/apps/blue-green/canary-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "Canary"       # 判斷 Header 的 Key Name
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"   # Canary Header 的值必須是 true 才導流
    # nginx.ingress.kubernetes.io/canary-weight: "50"            # 導流 50% 的流量
spec:
  rules:
    - host: day24.ithome.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: app-backend-preview
                port:
                  number: 80
