resources/day25/apps/blue-green/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-backend
  name: app-backend-preview
  namespace: ithome
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-backend
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-backend
  name: app-backend-stable
  namespace: ithome
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-backend
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: app-backend
  name: app-backend
  namespace: ithome
spec:
  selector:
    matchLabels:
      app: app-backend
  strategy:
    blueGreen:
      activeService: app-backend-stable
      autoPromotionEnabled: false
      previewService: app-backend-preview
  template:
    metadata:
      labels:
        app: app-backend
    spec:
      containers:
      - image: luciferstut/app-backend-for-ithome2024:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          periodSeconds: 10
        name: apps
        ports:
        - containerPort: 8080
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          periodSeconds: 10
        resources:
          limits:
            cpu: 1000m
            memory: 768Mi
          requests:
            cpu: 300m
            memory: 512Mi
        startupProbe:
          failureThreshold: 6
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          periodSeconds: 10
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: Canary
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
  name: canary-ingress
  namespace: ithome
spec:
  rules:
  - host: day24.ithome.com
    http:
      paths:
      - backend:
          service:
            name: app-backend-preview
            port:
              number: 80
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stable-ingress
  namespace: ithome
spec:
  rules:
  - host: day24.ithome.com
    http:
      paths:
      - backend:
          service:
            name: app-backend-stable
            port:
              number: 80
        pathType: ImplementationSpecific
