resources/day25/apps/blue-green/stable-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stable-ingress
spec:
  rules:
    - host: day24.ithome.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: app-backend-stable
                port:
                  number: 80
